<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Profile"
            app:titleCentered="true"
            app:titleTextAppearance="@style/BoldToolbarTitle" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:importantForAccessibility="no"
            android:src="@drawable/baseline_account_circle_48" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="4dp">

            <TextView
                style="@style/TextAppearance.Material3.HeadlineMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_last"
                android:textStyle="bold" />

            <TextView
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/metamask_address" />

            <TextView
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:maxLines="1"
                tools:text="0xFD19a96b92ab67608a614c9070028FC0b9e84d91" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginVertical="8dp"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:text="@string/my_tickets"
        android:textSize="24sp"
        app:drawableLeftCompat="@drawable/ic_ticket" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginVertical="8dp"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:text="@string/edit_profile"
        android:textSize="24sp"
        app:drawableLeftCompat="@drawable/baseline_edit_24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginVertical="8dp"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:text="@string/logout"
        android:textSize="24sp"
        app:drawableLeftCompat="@drawable/baseline_logout_24" />

</LinearLayout>